--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "ethers": "^6.14.3",
+    "express": "^5.1.0",
+    "graphql-request": "^7.2.0"
   }
 }
