--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "eigen-restaking-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "REST API backend for exposing EigenLayer restaking, validator, and reward data.",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": ["eigenlayer", "restaking", "api", "node", "ethers"],
+  "author": "R V Abhishek",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/R-V-Abhishek/eigen-restaking-api.git"},
+  "license": "MIT",
   "dependencies": {
-    "axios": "^1.9.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.0.3",
     "ethers": "^6.14.3",
-    "express": "^5.1.0",
-    "graphql-request": "^7.2.0"
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
