--- a/package.json
+++ b/package.json
@@ -7,16 +7,25 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
-  "keywords": ["eigenlayer", "restaking", "api", "node", "ethers"],
+  "keywords": [
+    "eigenlayer",
+    "restaking",
+    "api",
+    "node",
+    "ethers"
+  ],
   "author": "R V Abhishek",
   "repository": {
     "type": "git",
-    "url": "https://github.com/R-V-Abhishek/eigen-restaking-api.git"},
+    "url": "https://github.com/R-V-Abhishek/eigen-restaking-api.git"
+  },
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.5.0",
     "ethers": "^6.14.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "graphql-request": "^7.2.0",
+    "mongoose": "^8.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
